# first_flask_api

./: .gitignore  README.md  interface_streamlit.py  pyproject.toml
instance/: db.sqlite
migrations/versions/: 8ce818bcbd17_initial_migration.py
src/: app.py  config.py  primeiros_passos_com_flask.py  schema.sql
src/controllers/: auth.py  post.py  role.py  user.py  utils.py
src/models/: base.py  post.py  role.py  user.py
tests/integration/controllers/: conftest.py  test_user.py
tests/unit/: test_utils.py
